syntax = "proto3";
import "google/protobuf/timestamp.proto";

package grpc.dmms.v1;

message Device {
    string ID = 1;
    string name = 3;
    string description = 4;
    string status = 5;
    string userID = 6;
    string projectID = 7;
    string modelID = 8;
    google.protobuf.Timestamp created_at = 9;
    google.protobuf.Timestamp last_updated_at = 10;
    DataModel data_model = 11;
}

message Endpoint {
    string path = 1;
    string format = 2;
    map<string, string> models = 3;
}
message DataModel {
    string name = 1;
    string ID = 2;
    string domain = 3;
    repeated DataModelField data_model_fields= 4;
}

message DataModelField {
    string key = 1;
    string value = 2;
    string type = 3;
    string default_value = 4;
}

message DeviceModel {
    string ID = 1;
    string name = 2;
    string description = 3;
    string domain = 4;
    string version = 5;
    repeated Endpoint endpoints = 6;
    repeated DataModel dataModels = 7;
    bool isLogical = 8;
    bool isCompound = 9;
    repeated string ChildModels = 10;
    google.protobuf.Timestamp created_at = 11;
    google.protobuf.Timestamp last_updated_at = 12;
    string userID = 13;
    string Icon = 14;
}

message DeviceMetrics {
    string userID = 1;
    string deviceID = 2;
    map<string, int32> metrics = 3;
}

message DeviceMessage {
    string userID = 1;
    string deviceID = 2;
    string endpoint = 3;
    bytes payload = 4;
}

service DMMS {
    // DeviceModel
    rpc CreateDeviceModel(CreateDeviceModelRequest) returns (CreateDeviceModelResponse) {}
    rpc GetDeviceModel(GetDeviceModelRequest) returns (GetDeviceModelResponse) {}
    rpc GetDeviceModelWithName(GetDeviceModelWithNameRequest) returns (GetDeviceModelWithNameResponse) {}
    rpc DeleteDeviceModel(DeleteDeviceModelRequest) returns (DeleteDeviceModelResponse) {}
    rpc UpdateDeviceModel(UpdateDeviceModelRequest) returns (UpdateDeviceModelResponse) {}
    rpc GetDeviceModels(GetDeviceModelsRequest) returns (GetDeviceModelsResponse) {}

    // Device Management
    rpc AddDevice(AddDeviceRequest) returns (AddDeviceResponse) {}
    rpc GetDevice(GetDeviceRequest) returns (GetDeviceResponse) {}
    rpc UpdateDevice(UpdateDeviceRequest) returns (UpdateDeviceResponse) {}
    rpc GetDevices(GetDevicesRequest) returns (GetDevicesResponse) {}
    rpc DeleteDevice(DeleteDeviceRequest) returns (DeleteDeviceResponse) {}
    rpc SetDeviceStatus(SetDeviceStatusRequest) returns (SetDeviceStatusResponse) {}
    rpc GetDeviceLog(GetDeviceLogRequest) returns (GetDeviceLogResponse) {}
    rpc GetDeviceMetrics(GetDeviceMetricsRequest) returns (GetDeviceMetricsResponse) {}
    rpc PostDeviceMessage(PostDeviceMessageRequest) returns (PostDeviceMessageResponse) {}
}

// Device Model apis
message CreateDeviceModelRequest {
    string userID = 1;
    DeviceModel device_model = 2;
}
message CreateDeviceModelResponse {
    DeviceModel device_model = 1;
}

message GetDeviceModelRequest {
    string userID = 1;
    string deviceModelID = 2;
}
message GetDeviceModelResponse {
    DeviceModel device_model = 1;
}

message GetDeviceModelWithNameRequest {
    string userID = 1;
    string device_model_name = 2;
}
message GetDeviceModelWithNameResponse {
    DeviceModel device_model = 1;
}

message DeleteDeviceModelRequest {
    string userID = 1;
    string deviceModelID = 2;

}
message DeleteDeviceModelResponse {}

message UpdateDeviceModelRequest {
    string userID = 1;
    string deviceModelID = 2;
    DeviceModel device_model = 3;
}
message UpdateDeviceModelResponse {}

message GetDeviceModelsRequest {
    string userID = 1;
}
message GetDeviceModelsResponse {
    repeated DeviceModel device_models = 1;
}

// Device apis
message AddDeviceRequest {
    string userID = 1;
    Device device = 2;
}
message AddDeviceResponse {
    Device device = 1;
}

message GetDeviceRequest {
    string userID = 1;
    string deviceID = 2;
}
message GetDeviceResponse {
    Device device = 1;
}
message UpdateDeviceRequest {
    string userID = 1;
    Device device = 2;
}
message UpdateDeviceResponse {}

message GetDevicesRequest {
    string userID = 1;
    repeated string deviceIDs = 2;
}
message GetDevicesResponse {
    repeated Device devices = 1;
}

message DeleteDeviceRequest {
    string userID = 1;
    string deviceID = 2;
}
message DeleteDeviceResponse {}

message SetDeviceStatusRequest {
    string userID = 1;
    string deviceID = 2;
    string status = 3;
}
message SetDeviceStatusResponse {}

message GetDeviceLogRequest {
    string userID = 1;
    string deviceID = 2;
    google.protobuf.Timestamp since = 3;
}
message GetDeviceLogResponse {}

message GetDeviceMetricsRequest {
    string userID = 1;
    string deviceID =2;
}
message GetDeviceMetricsResponse {
    DeviceMetrics device_metrics = 1;
}

message PostDeviceMessageRequest {
    string userID = 1;
    string deviceID =2;
    DeviceMessage device_message = 3;
}
message PostDeviceMessageResponse {}






